Fix(entrypoint): LF endings + executable bit; ensure chmod in Dockerfile

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,8 @@ docker-compose.prod.yml
 # Editor
 .vscode/
 .idea/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
