Fix: Final Nginx static file configuration using root directive

--- a/.ebextensions/01_nginx_static.config
+++ b/.ebextensions/01_nginx_static.config
@@ -4,8 +4,16 @@ files:
     owner: root
     group: root
     content: |
+      # Nginx debe servir los archivos estáticos desde la carpeta 'staticfiles'
       location /static/ {
-          alias /usr/src/app/staticfiles/;
+          root /usr/src/app/;
+          expires max;
+          add_header Cache-Control public;
+      }
+      
+      # Si DRF Spectacular busca el archivo en la raíz del dominio, esto podría ayudar
+      location /drf_spectacular/ {
+          root /usr/local/lib/python3.11/site-packages/;
           expires max;
           add_header Cache-Control public;
       }
