Fix: Final Nginx mapping, serving drf_spectacular files directly from site-packages

--- a/.ebextensions/01_nginx_static.config
+++ b/.ebextensions/01_nginx_static.config
@@ -4,16 +4,17 @@ files:
     owner: root
     group: root
     content: |
-      # Nginx debe servir los archivos estáticos desde la carpeta 'staticfiles'
+      # 1. Sirve la carpeta 'staticfiles' general
       location /static/ {
-          root /usr/src/app/;
+          alias /usr/src/app/staticfiles/;
           expires max;
           add_header Cache-Control public;
       }
       
-      # Si DRF Spectacular busca el archivo en la raíz del dominio, esto podría ayudar
-      location /drf_spectacular/ {
-          root /usr/local/lib/python3.11/site-packages/;
+      # 2. Mapeo específico para la carpeta de DRF Spectacular (la que te da problemas)
+      # Buscamos la librería directamente en el venv (/opt/venv/lib/...)
+      location /static/drf_spectacular/ {
+          alias /opt/venv/lib/python3.11/site-packages/drf_spectacular/static/drf_spectacular/;
           expires max;
           add_header Cache-Control public;
       }
