Fix: Nginx static file alias simplified to standard configuration

--- a/.ebextensions/01_nginx_static.config
+++ b/.ebextensions/01_nginx_static.config
@@ -4,17 +4,9 @@ files:
     owner: root
     group: root
     content: |
-      # 1. Sirve la carpeta 'staticfiles' general
+      # Configuración estándar para servir archivos estáticos desde STATIC_ROOT
       location /static/ {
           alias /usr/src/app/staticfiles/;
-          expires max;
-          add_header Cache-Control public;
-      }
-      
-      # 2. Mapeo específico para la carpeta de DRF Spectacular (la que te da problemas)
-      # Buscamos la librería directamente en el venv (/opt/venv/lib/...)
-      location /static/drf_spectacular/ {
-          alias /opt/venv/lib/python3.11/site-packages/drf_spectacular/static/drf_spectacular/;
           expires max;
           add_header Cache-Control public;
       }
